swagger configuration added
